added index page

--- a/app/views/users/users/index.html.erb
+++ b/app/views/users/users/index.html.erb
@@ -1,1 +1,18 @@
 <h1>hello user</h1>
+
+<h2>user</h2>
+<br>
+<%=user_signed_in?%>
+<br>
+<%=current_user.inspect%>
+<br>
+<%=user_session%>
+<br>
+
+<h2>admin</h2>
+<br>
+<%=admin_signed_in?%>
+<br>
+<%=current_admin.inspect%>
+<br>
+<%=admin_session%>
